--- a/blogs/download.html
+++ b/blogs/download.html
@@ -168,6 +168,16 @@
             <img src="./imgs/advertising.png" class="img img-height-less" />
           </div>
           <br />
+          <a
+            class="txt hyperlink"
+            href="https://discord.com/terms/terms-of-service-may-2020"
+            >Actual Discord tos</a
+          >
+          <br />
+          <div class="img-container">
+            <img src="./imgs/actual-tos.png" class="img img-width-more" />
+          </div>
+          <br />
           <br />
           <br />
           <br />
