--- a/blogs/download.html
+++ b/blogs/download.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <title>Lyra Network - Lyra Client - Download</title>
+    <title>Lyra Download</title>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://lyrapvp.net/" />
     <meta property="og:title" content="Lyra Network - Lyra Client - Download" />
