--- a/blogs/download.html
+++ b/blogs/download.html
@@ -152,7 +152,7 @@
           <br />
           <br />
           <br />
-          <span class="txt"> We log underaged users too</span>
+          <span class="txt"> We log underaged users too. WE BREAK ALL DATA COLLECTION LAWS.</span>
           <br />
           <br />
           <br />
