--- a/blogs/download.html
+++ b/blogs/download.html
@@ -142,7 +142,7 @@
           <br />
           <span class="txt" id="stats">
             6. We collect your data without consent. We even log wether you're
-            in singleplayer.
+            in singleplayer. Fuck data collection consent amr?
           </span>
           <br />
           <br />
