--- a/blogs/download.html
+++ b/blogs/download.html
@@ -62,7 +62,7 @@
               class="txt hyperlink"
               href="https://web.archive.org/web/20240507170300/https://discordbotlist.com/servers/mod-index-870991891741683732"
               >WayBack Machine.</a
-            >
+            > 20k+ members.
           </span>
           <br />
           <br />
