--- a/blogs/download.html
+++ b/blogs/download.html
@@ -166,6 +166,8 @@
           <br />
           <div class="img-container">
             <img src="./imgs/advertising.png" class="img img-height-less" />
+            <br />
+            <img src="./imgs/genesis-2.png" class="img img-width" />
           </div>
           <br />
           <a
