--- a/blogs/download.html
+++ b/blogs/download.html
@@ -26,7 +26,7 @@
     <div id="topbar">
       <div id="logo" class="trigger" onclick="location.href = '../'">
         <img id="icon" src="../icon.png" />
-        <span class="txt uppercase lyra-l" id="lyra-txt">Lyra Download</span>
+        <span class="txt uppercase lyra-l" id="lyra-txt">Lyra Network</span>
       </div>
       <div id="goback">
         <span class="txt">Return ☇</span>
