--- a/blogs/download.html
+++ b/blogs/download.html
@@ -136,6 +136,13 @@
           </div>
           <br />
           <br />
+           <span class="txt"> Our Discord server is definitely setup by competent people. </span>
+          <br />
+           <span class="txt"> We get raided every week because we trust every single user and give them every permission we can offer. </span>
+          <br />
+           <span class="txt"> We use webhooks and share them because we really like our community and want the best safety for everyone. </span>
+          <br />
+          <br />
           <br />
           <br />
           <br />
