--- a/blogs/download.html
+++ b/blogs/download.html
@@ -211,8 +211,8 @@
           </button>
           <br />
           <br />
-          <a class="txt hyperlink" href="https://discord.gg/6tV6jqR2"
-            >Fuck Lyra and join Ceras</a
+          <a class="txt hyperlink" href="https://discord.gg/kuraiclient"
+            >Fuck Lyra and join Kurai</a
           >
           <br />
           <br />
