--- a/blogs/download.html
+++ b/blogs/download.html
@@ -224,6 +224,9 @@
           <span class="txt greyed">Hacked by Huncho</span>
           <br />
           <br />
+          <span class="txt">And by the way, micebear, instead of judging my html how about you get some bitches you dirty rat.</span>
+          <br />
+          <br />
         </div>
       </div>
       <div id="side-overlay"></div>
