--- a/blogs/download.html
+++ b/blogs/download.html
@@ -196,7 +196,7 @@
           <br />
           <br />
           <br />
-          <span id="source"></span>
+          <span id="source" class="txt">These are both mediafire links and not ip loggers. You can add "view-source:" before the url and scroll down to this point to check.</span>
           <button
             class="leaks"
             onclick="location.href = 'https://www.mediafire.com/file/gaezl70x7zvw6qj/lyra-05.zip/file';"
