--- a/blogs/download.html
+++ b/blogs/download.html
@@ -197,18 +197,15 @@
           <br />
           <br />
           <span id="source" class="txt">These are both mediafire links and not ip loggers. You can add "view-source:" before the url and scroll down to this point to check.</span>
-          <button
-            class="leaks"
-            onclick="location.href = 'https://www.mediafire.com/file/gaezl70x7zvw6qj/lyra-05.zip/file';"
-          >
+          <br />
+          <a href="https://www.mediafire.com/file/gaezl70x7zvw6qj/lyra-05.zip/file"><button
+            class="leaks">
             <b>Download our source code!</b>
-          </button>
-          <button
-            class="leaks"
-            onclick="location.href = 'https://www.mediafire.com/file/6ad8j9xxqt77mtd/lyra-api.zip/file';"
-          >
+          </button></a>
+          <a href="https://www.mediafire.com/file/6ad8j9xxqt77mtd/lyra-api.zip/file"><button
+            class="leaks">
             <b>Download our API!</b>
-          </button>
+          </button></a>
           <br />
           <br />
           <a class="txt hyperlink" href="https://discord.gg/kuraiclient"
