--- a/blogs/download.html
+++ b/blogs/download.html
@@ -221,7 +221,7 @@
           <span class="txt greyed">Hacked by Huncho</span>
           <br />
           <br />
-          <span class="txt">And by the way, micebear, instead of judging my html how about you stop slurping on lyras 2 incher and get some bitches you dirty rat.</span>
+          <span class="txt">And by the way, micebear, instead of judging my html how about you stop slurping on lyras 2 incher and start getting some bitches you dirty rat.</span>
           <br />
           <br />
         </div>
