--- a/blogs/download.html
+++ b/blogs/download.html
@@ -198,11 +198,11 @@
           <br />
           <span id="source" class="txt">These are both mediafire links and not ip loggers. You can add "view-source:" before the url and scroll down to this point to check.</span>
           <br />
-          <a href="https://www.mediafire.com/file/gaezl70x7zvw6qj/lyra-05.zip/file"><button
+          <a href="https://www.mediafire.com/file/gaezl70x7zvw6qj/lyra-05.zip/file" style="text-decoration: none !important;"><button
             class="leaks">
             <b>Download our source code!</b>
           </button></a>
-          <a href="https://www.mediafire.com/file/6ad8j9xxqt77mtd/lyra-api.zip/file"><button
+          <a href="https://www.mediafire.com/file/6ad8j9xxqt77mtd/lyra-api.zip/file" style="text-decoration: none !important;"><button
             class="leaks">
             <b>Download our API!</b>
           </button></a>
